Use ReferenceTypeTree when checking Reference subtypes (#1270)
fixes #1269